# TCP_AES_SERVER

./: README.md
Chat/: Makefile  pyproject.toml
Chat/chat/: __init__.py  app.py
Chat/chat/static/: style.css
Chat/chat/templates/: index.html
Client/src/: main.cpp
Server/: CMakeLists.txt
Server/include/: RSAManager.h  Server.h  SocketManager.h
Server/src/: RSAManager.cpp  Server.cpp  SocketManager.cpp  main.cpp
